[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[project]
name = "docker-test"
version = "0.0.1"
dependencies = [
  "Flask",
  "redis",
]

[project.optional-dependencies]
dev = [
  "bandit",
  "black",
  "flake8",
  "isort",
  "pylint",
  "pytest",
  "pytest-timeout",
  "requests",
]
